[package]
name = "cfdns"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = {version = "0.11.18", features=["blocking"]}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_derive = "1"
log = "0.4.19"
clap = { version = "4.3.19", features = ["derive"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
